# ARTDynInsnsPatchDemo

./: .gitmodules  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/moe/rikkarin/artdyninsnspatch/demo/: App.kt  ClassToPatch.java  MainActivity.kt
app/src/main/java/moe/rikkarin/artdyninsnspatch/demo/jni/: JNICore.kt
app/src/main/java/moe/rikkarin/artdyninsnspatch/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/moe/rikkarin/artdyninsnspatch/demo/utils/: AppContext.kt
app/src/main/jni/: CMakeLists.txt  dyn_patcher.cc
app/src/main/jni/art/: art_method.hpp  code_item.hpp
app/src/main/jni/utils/: logging.hpp  scoped_local_ref.hpp  sym_resolver.hpp
app/src/main/res/values/: strings.xml  themes.xml
docs/: art_method_code_patching.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
